--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "helmet": "^7.1.0",
+    "ioredis": "^5.4.1",
     "luxon": "^3.4.4",
     "minio": "^8.0.0",
     "otplib": "^12.0.1",
@@ -43,6 +44,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jest": "29.5.12",
+    "@types/luxon": "^3.3.4",
     "@types/node": "20.12.7",
     "@types/passport-jwt": "^3.0.9",
     "@types/pino": "^7.0.0",
