test(api): add coverage for math, numbering, and einvoice flow

--- a/.env.example
+++ b/.env.example
@@ -57,5 +57,15 @@ NEXTAUTH_SECRET=change-me
 # Worker Jobs
 BACKUP_TIME=02:00
 
+# E-Invoice
+EINVOICE_PROVIDER=MOCK
+EINVOICE_ENDPOINT=https://mock-einvoice.local
+EINVOICE_API_KEY=
+EINVOICE_ENV=sandbox
+EINVOICE_TIMEOUT_HOURS=24
+EINVOICE_POLL_SECONDS=600
+EINVOICE_POLL_MAX_SECONDS=3600
+EINVOICE_MAX_ATTEMPTS=5
+
 # Analytics/Telemetry
 METRICS_PORT=9100
