--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,7 @@
     "ioredis": "^5.4.1",
     "luxon": "^3.4.4",
     "minio": "^8.0.0",
+    "pdfkit": "^0.13.0",
     "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -47,6 +48,7 @@
     "@types/luxon": "^3.3.4",
     "@types/node": "20.12.7",
     "@types/passport-jwt": "^3.0.9",
+    "@types/pdfkit": "^0.13.4",
     "@types/pino": "^7.0.0",
     "@types/pino-http": "^5.8.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
