feat: streamline docker compose deployment

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,18 @@
 # Global
-NODE_ENV=development
+NODE_ENV=production
 TZ=Asia/Kuala_Lumpur
-DOMAIN=whatsappbot.laptoppro.my
+DOMAIN=whatsappbot.example.com
+PUBLIC_URL=https://whatsappbot.example.com
+CERTBOT_EMAIL=admin@whatsappbot.example.com
 GIT_SHA=local
 
 # Postgres
 POSTGRES_USER=spec
-POSTGRES_PASSWORD=specpassword
+POSTGRES_PASSWORD=super-secure-change-me
 POSTGRES_DB=spec
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-DATABASE_URL=postgresql://spec:specpassword@postgres:5432/spec?schema=public
+DATABASE_URL=postgresql://spec:super-secure-change-me@postgres:5432/spec?schema=public
 
 # Redis
 REDIS_HOST=redis
@@ -30,12 +32,13 @@ JWT_SECRET=change-me
 JWT_REFRESH_SECRET=change-me-refresh
 SESSION_COOKIE_NAME=spec_session
 SESSION_COOKIE_SECRET=change-me-too
-CORS_ORIGIN=https://whatsappbot.laptoppro.my
+CORS_ORIGIN=https://whatsappbot.example.com
 RATE_LIMIT_WINDOW=60000
 RATE_LIMIT_MAX=5
 RECAPTCHA_SITE_KEY=your-recaptcha-site-key
 RECAPTCHA_SECRET=your-recaptcha-secret
 TOTP_ISSUER=SPEC-1 SuperApp
+AI_API_KEY=your-ai-provider-key
 
 # Baileys Gateway
 BAILEYS_WS_PORT=4002
@@ -51,8 +54,9 @@ RECAPTCHA_SECRET_FILE=
 MINIO_SECRET_KEY_FILE=
 
 # Web App
-NEXT_PUBLIC_API_BASE_URL=https://whatsappbot.laptoppro.my/api
+NEXT_PUBLIC_API_BASE_URL=https://whatsappbot.example.com/api
 NEXTAUTH_SECRET=change-me
+NEXTAUTH_URL=https://whatsappbot.example.com
 
 # Worker Jobs
 BACKUP_TIME=02:00
