--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -13,9 +13,13 @@ http {
   sendfile        on;
   keepalive_timeout  65;
   server_tokens off;
+
   gzip on;
   gzip_comp_level 5;
-  gzip_types text/plain text/css application/json application/javascript application/xml+rss text/javascript image/svg+xml;
+  gzip_min_length 1024;
+  gzip_proxied any;
+  gzip_vary on;
+  gzip_types text/plain text/css application/json application/javascript application/xml application/xml+rss text/javascript image/svg+xml;
 
   map $http_upgrade $connection_upgrade {
     default upgrade;
@@ -41,6 +45,13 @@ http {
   server {
     listen 80;
     server_name whatsappbot.laptoppro.my;
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
+    location = /healthz {
+      add_header Content-Type text/plain;
+      return 200 'ok';
+    }
     return 301 https://$host$request_uri;
   }
 
@@ -59,6 +70,15 @@ http {
 
     access_log /var/log/nginx/access.log main;
 
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
+
+    location = /healthz {
+      add_header Content-Type text/plain;
+      return 200 'ok';
+    }
+
     location /api/ {
       proxy_pass http://api_app/;
       proxy_set_header Host $host;
@@ -75,7 +95,7 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
       proxy_set_header Host $host;
-      proxy_read_timeout 300s;
+      proxy_read_timeout 3600s;
     }
 
     location / {
