Prevent negative POS stock and improve tests

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ RATE_LIMIT_MAX=5
 RECAPTCHA_SITE_KEY=your-recaptcha-site-key
 RECAPTCHA_SECRET=your-recaptcha-secret
 TOTP_ISSUER=SPEC-1 SuperApp
+# Optional: reserved for future AI assistant integrations
 AI_API_KEY=your-ai-provider-key
 
 # Baileys Gateway
